Set isContentInvalid attribute of NodeAccessibilityInfo

Added functionality to set the isContentInvalid attribute of
NodeAccessibilityInfo, with the larger goal of exposing this
information to TalkBack. Added a test to check the presence of this
attribute in an invalid editText object.

R=dmazzoni@chromium.org

Bug: 847233
Change-Id: Ib5ddc3287d719dce184e57af825df5720be0c5db
Reviewed-on: https://chromium-review.googlesource.com/c/1320219
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Commit-Queue: Akihiro Ota <akihiroota@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606924}
Former-commit-id: 28dfa4c339b1490fddddceb02b0450b9179fadcd